# termcall

./: .gitignore  Cargo.toml  PRD.txt  README.md  build.rs  install_termcall.sh  pyproject.toml  rec_log_cow.txt  rec_log_moo.txt  requirements.txt  send_log_cow.txt  send_log_moo.txt
pixel_mapping/: compute_darkness.py  create_mapping  mapping.json
src/: app.rs  ascii.rs  camera.rs  dump.rs  frame.rs  frame_writer.rs  main.rs  microphone.rs  peer_connection.rs  rtdb.rs  sixel.rs  speaker.rs  stats.rs  terminal.rs  tui.rs  ui.rs  video.rs  webrtc_handler.rs
src/devices/: camera.rs  microphone.rs  mod.rs  speaker.rs
src/rtc/: answerer.rs  config.rs  mod.rs  offerer.rs  peer_connection.rs
src/schemas/: user.rs
src/termcall/: auth.py  errors.py  firebase.py  main.py  test_avfoundation.py  ui.py  utils.py  webrtc.py
src/webrtc/: answer.rs  local.rs  offer.rs  remote.rs
v1/: local_build.sh  requirements.txt  setup.py  test.py  upload_to_pypi.sh
v1/termcall/: auth.py  firebase.py  main.py  rendering.py  webrtc.py
