[package]
name = "termcall"
version = "0.1.0"
edition = "2021"
default-run = "termcall"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = { version = "0.88.6", features = ["clang-runtime"] }
cpal = "0.15.2"
libsixel-sys = "0.1.0"
just-webrtc = "0.1.1"
ctrlc = "3.4.4"
crossterm = "0.27.0"
firebase-rs = "2.1.1"
bincode = "1.3.3"
bytes = "1.6.0"
tokio = "1.37.0"


[[bin]]
name = "termcall"
path = "src/main.rs"

[[bin]]
name = "local"
path = "src/webrtc/local.rs"

[[bin]]
name = "remote"
path = "src/webrtc/remote.rs"
