[package]
name = "termcall"
version = "0.1.0"
edition = "2021"
default-run = "termcall"

[dependencies]
opencv = { version = "0.92.0", features = ["clang-runtime"] }
cpal = "0.15.2"
libsixel-sys = "0.1.0"
just-webrtc = "0.1.1"
crossterm = "0.27.0"
firebase-rs = "2.1.1"
bincode = "1.3.3"
bytes = "1.6.0"
tokio = "1.37.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
webrtc = "0.11.0"
anyhow = "1.0.86"

[[bin]]
name = "termcall"
path = "src/main.rs"

[[bin]]
name = "offer"
path = "src/webrtc/offer.rs"

[[bin]]
name = "answer"
path = "src/webrtc/answer.rs"
