[package]
name = "termcall"
version = "0.1.0"
edition = "2021"
default-run = "termcall"

[dependencies]
opencv = { version = "0.92.0", features = ["clang-runtime"] }
cpal = "0.15.2"
crossterm = "0.27.0"
firebase-rs = "2.1.1"
bytes = "1.6.0"
tokio = "1.37.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
webrtc = "0.11.0"
anyhow = "1.0.86"
simple-log = "1.6.0"
ratatui = "0.26.3"
bincode = "1.3.3"
